[Picture in Picture] Show controls when interacted with by gesture.

Currently, tapping the controls will not show any of the controls.
However, tapping the window where a control (e.g. play/pause, close)
will activate it.

With this change, the first tap on the window will show controls,
and subsequent taps will be able to interact with the controls if they
are visible.

Bug: 854373
Change-Id: Ibceea8ac868071c675fa50b5e031ad0abd0e02cc
Reviewed-on: https://chromium-review.googlesource.com/1107109
Reviewed-by: CJ DiMeglio <lethalantidote@chromium.org>
Commit-Queue: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568656}
Former-commit-id: 66d2629e1f49beff483effd1fe87fcfc02d9b2a9